# scripts

./: DIAGRAMS.Md  Dockerfile  GRAPHQL.md  README.md  dashboard_infra.py  docker-compose.yaml  extract_collections.py  graphql_api.py  infra.py  load_sheet_to_mongodb.py  normalize.py  pyproject.toml  rest_api.md  rest_api.py  shared-resources.types.json  sheet.xlsx  upload_collections.py
collection/: CAMPUS.json  CURSOS.json  DISCIPLINAS.json  OFERTAS.json  PERIODOS.json  PROFESSORES.json  SALAS.json
new_collection/: CAMPUS.json  CURSOS.json  DISCIPLINAS.json  OFERTAS.json  PERIODOS.json  PROFESSORES.json  SALAS.json
processamento_planilha/: comparando_jsons.py  extract_collections.py  get_old_collections_from_mongo.py  load_sheet_to_mongodb.py  main.py  normalize.py  normalize.py~  upload_collections.py  upload_collections.py~
processamento_planilha/__pycache__/: comparando_jsons.cpython-313.pyc.2339498986512
processamento_planilha/comparedjsonfiles/: CAMPUS.json  CURSOS.json  DISCIPLINAS.json  OFERTAS.json  PERIODOS.json  PROFESSORES.json  SALAS.json
processamento_planilha/jsonfiles/: CAMPUS.json  OFERTAS.json  PERIODOS.json  PROFESSORES.json  SALAS.json
processamento_planilha/oldjsonfiles/: CAMPUS.json  CURSOS.json  DISCIPLINAS.json  OFERTAS.json  PERIODOS.json  PROFESSORES.json  SALAS.json
